# Design-Patterns-labs

./: README.md
Lab1-Lecture/: CMakeLists.txt  Lecture.drawio
Lab1-Lecture/include/: classes.h
Lab1-Lecture/src/: classes.cpp  simulation.cpp
Lab2-GeometryVisualizer/: CMakeLists.txt  run.sh
Lab2-GeometryVisualizer/include/: classes.h  drawing_tool.h
Lab2-GeometryVisualizer/src/: classes.cpp  drawing_tool.cpp  test.cpp
Lab2.2-GeometryVisualizer/: CMakeLists.txt  run.sh
Lab2.2-GeometryVisualizer/include/: classes.h  drawing_tool.h  graphical_interface.h
Lab2.2-GeometryVisualizer/src/: classes.cpp  drawing_tool.cpp  window.cpp
